--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "handymen-hub-api",
+  "name": "server",
   "version": "1.0.0",
-  "description": "handymen hub api",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit",
-    "start": "node index.js",
-    "start-dev": "nodemon index.js"
+    "dev": "nodemon",
+    "start": "tsc -p . && node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ."
   },
-  "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1439.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.2"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
+    "jwk-to-pem": "^2.0.5",
+    "node-fetch": "^2.6.12",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwk-to-pem": "^2.0.1",
+    "@types/node": "^20.5.0",
+    "@types/node-fetch": "^2.6.4",
+    "@types/pg": "^8.10.2",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
