--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "jwk-to-pem": "^2.0.5",
     "node-fetch": "^2.6.12",
