--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },"devDependencies": {
+    "@types/react-datepicker": "^4.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
